--- a/SolarShop/SellerApp/templates/SellerApp/CreateListings.html
+++ b/SolarShop/SellerApp/templates/SellerApp/CreateListings.html
@@ -55,7 +55,7 @@
         <div class="col-md-12 mb-3">
             <form>
                 {% csrf_token %}
-                <button id="submit" class="btn btn-primary" type="submit" value="ok">Submit Listing</button>
+                <button id="submit" class="btn btn-primary" type="submit" value="ok">Create Listing</button>
             </form>
         </div>
     </form>
